# Python_Win_AutoUpdate

./: .gitignore  README.md  create_icon.py  pyproject.toml  requirements.txt  run.py
Python_AutoUpdate/: README.md
src/: __init__.py  downloader.py  installer.py  main.py  scheduler.py  settings_manager.py  version_checker.py
src/gui/: __init__.py  main_window.py  main_window_standalone.py  options_dialog.py
